# texas-holdem-cpp

./: LICENSE  README.md
Tehas Holdem cpp/: CMakeLists.txt  history.txt  igra.cpp  igra.h  igrok.cpp  igrok.h  karta.h  koloda.cpp  koloda.h  main.cpp  ocenka_ruki.cpp  ocenka_ruki.h  setup_shortcut.py  texas_holdem
